plugins/fir/fir-plugin-prototype/testData/checkers/simple.kt
<!SYNTAX_ERROR!>fun dummy(x: Int) {

}<!>

class A {
    <!SYNTAX_ERROR!>fun dummy() {

    }<!>
}

class B {
    val dummy: Int = 1
}